--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,29 @@
  background-color:#fafafa;
  height:100%;
 }
+.app__posts{
+  padding: 20px;
+}
 
 .app__header {
+  position: sticky;
+  top:0;
+  z-index:1;
   object-fit: contain;
   background-color: white;
   padding: 6px;
   border-bottom: 1px solid lightgray;
+  display: flex;
+  justify-content: space-between;
+}
+.app__headerImage{
+  object-fit: contain;
 }
 
 .app__signup{
   display: flex;
   flex-direction: column;
+}
+.app__loginContainer{
+  border:1px solid lightgray ;
 }
