--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
 }
 .app__posts{
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .app__header {
