--- a/src/post.css
+++ b/src/post.css
@@ -41,3 +41,7 @@
     background-color: transparent;
     color: rgb(7, 69, 140);
 }
+.post__comments{
+    padding: 10px;
+    line-height: 30px;
+}
